--- a/Engine/Engine.vcxproj
+++ b/Engine/Engine.vcxproj
@@ -164,6 +164,7 @@
     <ClInclude Include="Source\Exception\OutOfMemoryException.h" />
     <ClInclude Include="Source\Memory\AllocatorUtility.h" />
     <ClInclude Include="Source\Memory\BaseAllocator.h" />
+    <ClInclude Include="Source\Memory\FreeListAllocator.h" />
     <ClInclude Include="Source\Memory\IAllocator.h" />
     <ClInclude Include="Source\Memory\IDeallocator.h" />
     <ClInclude Include="Source\Memory\LinearAllocator.h" />
@@ -176,6 +177,7 @@
     <ClCompile Include="Source\Exception\OutOfMemoryException.cpp" />
     <ClCompile Include="Source\Memory\AllocatorUtility.cpp" />
     <ClCompile Include="Source\Memory\BaseAllocator.cpp" />
+    <ClCompile Include="Source\Memory\FreeListAllocator.cpp" />
     <ClCompile Include="Source\Memory\IAllocator.cpp" />
     <ClCompile Include="Source\Memory\IDeallocator.cpp" />
     <ClCompile Include="Source\Memory\LinearAllocator.cpp" />
