--- a/Engine/Engine.vcxproj
+++ b/Engine/Engine.vcxproj
@@ -196,7 +196,9 @@
     <ClInclude Include="Source\Memory\LinearAllocator.h" />
     <ClInclude Include="Source\Memory\StackAllocator.h" />
     <ClInclude Include="Source\Rendering\DirectXCore.h" />
+    <ClInclude Include="Source\Rendering\GraphicsDevice.h" />
     <ClInclude Include="Source\Rendering\Renderer.h" />
+    <ClInclude Include="Source\Rendering\SwapChain.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Source\Application\Application.cpp" />
@@ -218,7 +220,9 @@
     <ClCompile Include="Source\Memory\IDeallocator.cpp" />
     <ClCompile Include="Source\Memory\LinearAllocator.cpp" />
     <ClCompile Include="Source\Memory\StackAllocator.cpp" />
+    <ClCompile Include="Source\Rendering\GraphicsDevice.cpp" />
     <ClCompile Include="Source\Rendering\Renderer.cpp" />
+    <ClCompile Include="Source\Rendering\SwapChain.cpp" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
